[gd_scene load_steps=5 format=3 uid="uid://bhi2e3prmcdg3"]

[ext_resource type="Script" path="res://Dialogs/warning_dialog.gd" id="1_b8kl7"]
[ext_resource type="Texture2D" uid="uid://cfj1eesy8b3ld" path="res://Assets/Dialogs/object_0001_poiner_info.png" id="1_r43gp"]
[ext_resource type="Texture2D" uid="uid://bfqkoetphpu03" path="res://Assets/Dialogs/dialogue_yellow.png" id="3_8ayiq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwnsk"]
size = Vector2(111, 61)

[node name="WarningDialog" type="Node2D"]
script = ExtResource("1_b8kl7")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_r43gp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3.5, -12.5)
shape = SubResource("RectangleShape2D_uwnsk")

[node name="DialogSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, -27)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_8ayiq")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
